# parallel_theory

./: README.md  server.txt
task1/: CMakeLists.txt  build.md  task1.c
task2/: CMakeLists.txt  build.md  task2.c
task3/: CMakeLists.txt  build.md  scheduling.cpp  task3.cpp
